// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module Module component 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="87b956b7-8662-4334-a467-551ce62744b8"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-87b956b7-8662-4334-a467-551ce62744b8"
  role="main"
  tabIndex={-1}
>
  <div />
</div>
`;

exports[`Module Module component with child 1`] = `
<div
  className="component obojobo-draft--modules--module"
  data-focussed={false}
  data-id="87b956b7-8662-4334-a467-551ce62744b8"
  data-obo-component={true}
  data-type="ObojoboDraft.Modules.Module"
  id="obo-87b956b7-8662-4334-a467-551ce62744b8"
  role="main"
  tabIndex={-1}
>
  <div>
    <MockComponent
      model={
        Object {
          "getComponentClass": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": "MockComponent",
              },
            ],
          },
        }
      }
      moduleData={
        Object {
          "focusState": Object {},
          "navState": Object {},
        }
      }
    />
  </div>
</div>
`;
